@@ -24752,11 +24752,13 @@ int system(const char *command);
 @samp{Fsystem,@var{commandptr}/@var{len}}
 
 @item Return value:
-The value returned is -1 on error and the return status
-of the command otherwise.  Only the exit status of the
-command is returned, which is extracted from the host's
-@code{system} return value by calling @code{WEXITSTATUS(retval)}.
-In case @file{/bin/sh} could not be executed, 127 is returned.
+If @var{len} is zero, the return value indicates whether a shell is
+available.  A zero return value indicates a shell is not available.
+For non-zero @var{len}, the value returned is -1 on error and the
+return status of the command otherwise.  Only the exit status of the
+command is returned, which is extracted from the host's @code{system}
+return value by calling @code{WEXITSTATUS(retval)}.  In case
+@file{/bin/sh} could not be executed, 127 is returned.
 
 @item Errors:
 
